--- a/src/style/sections.scss
+++ b/src/style/sections.scss
@@ -174,6 +174,7 @@ section {
   #project--list {
     max-width: 600px;
     margin: 0 auto;
+    padding: 15px;
 
     .project {
       @media (min-width: 960px) {
@@ -190,9 +191,8 @@ section {
       }
     }
     .project--screenshot {
-      @include img-fluid;
       max-width: 500px;
-      margin: 20px;
+      @include img-fluid;
     }
   }
 }
