--- a/src/style/utility.scss
+++ b/src/style/utility.scss
@@ -118,7 +118,7 @@ ul.tag {
 }
 
 .centre-btn-container {
-  width: 500px;
+  max-width: 500px;
   margin: 40px auto;
   text-align: center;
 }
